2008-11-27  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 562386 – PF_SLIDER and PF_SPINNER 'Step' values do not change
	consistently...

	* plug-ins/pygimp/gimpfu.py (SpinnerEntry): initialize the
	spin-button the way that gtk_spin_button_new_with_range() is
	implemented.

2008-11-26  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	Bug 562366 – Default image dimensions are not correctly
	transferred in the file/new dialog box

	* app/dialogs/preferences-dialog.c
	(prefs_template_select_callback): We need to copy the template in
	the same way as in the New Image dialog.

	* app/dialogs/image-new-dialog.c (image_new_dialog_set): ... and
	when we copy the template to the New Image dialog.

2008-11-22  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 561899 – GIMP can't save to mounted filesystem if file exists

	* plug-ins/file-uri/uri-backend-gvfs.c (copy_uri): pass the
	G_FILE_COPY_OVERWRITE flag to g_file_copy().

2008-11-21  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.6.4 (interface age 4).

2008-11-21  Sven Neumann  <sven@gimp.org>

	* Made 2.6.3 release.

2008-11-19  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 558454 – Plugin Map Color Range disappears from GIMP

	* plug-ins/script-fu/scripts/Makefile.am

	* plug-ins/script-fu/scripts/plug-in-compat.init: new file
	providing compatibility with plug-ins from older GIMP
	versions. Contains a reimplementation of plug-in-color-map based
	on ideas and code from Eric Lamarque.

	* plug-ins/script-fu/scheme-wrapper.c (tinyscheme_init): load the
	plug-in-compat.init file.

2008-11-18  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	Bug 559239 – Error while loading psd-data

	* plug-ins/file-psd/psd-layer-res-load.c (load_layer_resource):
	Layer resource data should not be padded.

2008-11-15  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/display/gimpdisplayshell-scroll.[ch]: removed function